--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
       GOOGLE_MAPS_API_KEY: ${GOOGLE_MAPS_API_KEY:-} # .envファイルからAPIキーを読み込む
       SELENIUM_URL: http://selenium:4444/wd/hub # webコンテナからseleniumコンテナに接続するためのURL
       LINE_CHANNEL_ID: ${LINE_CHANNEL_ID:-} 
-      LINE_CHANNEL_SECRET: ${LINE_CHENNEL_SECRET:-}
+      LINE_CHANNEL_SECRET: ${LINE_CHANNEL_SECRET:-}
       NGROK_URL: ${NGROK_URL}
 
 volumes:
