本番用にngtokに関するコードを変更

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
       LINE_CHANNEL_ID: ${LINE_CHANNEL_ID:-} 
       LINE_CHANNEL_SECRET: ${LINE_CHANNEL_SECRET:-}
       NGROK_URL: ${NGROK_URL}
+      MY_APP_URL: ${MY_APP_URL}
 
 volumes:
   db-data:
