--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -8,6 +8,7 @@ jobs:
   rspec:
     runs-on: ubuntu-latest
     timeout-minutes: 10
+
     services:
       db:
         image: postgres:15
@@ -20,7 +21,7 @@ jobs:
           --health-cmd "pg-isready -U postgres"
           --health-interval 10s
           --health-timeout 5s
-          --health-retries 5
+          --health-retries 10
       selenium:
         image: seleniarm/standalone-chromium:latest
         ports:
@@ -34,6 +35,7 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           bundler-cache: true
+          ruby-version: '3.2.3'
 
       - name: Cache node modules
         uses: actions/cache@v4
@@ -59,7 +61,7 @@ jobs:
 
       - name: Run rspec
         env: 
-          SELENIUM_URL: http://localhost:4444/wd/hub 
+          SELENIUM_URL:  http://selenium:4444/wd/hub 
         run: bundle exec rspec
 
       - name: List all containers
