JSビルドのコードを追加

--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -54,6 +54,9 @@ jobs:
       - name: Yarn install
         run: yarn install --check-files
 
+      - name: Build JavaScript assets
+        run: yarn build
+
       - name: Database create and migrate
         run: |
           cp config/database.yml.ci config/database.yml
