--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -63,6 +63,17 @@ jobs:
           bundle exec rails db:create RAILS_ENV=test
           bundle exec rails db:migrate RAILS_ENV=test
 
+      - name: Debug Credentials
+        env:
+          RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
+        run: |
+          echo "RAILS_ENV is $RAILS_ENV"
+          echo "Checking development key:"
+          bin/rails runner "puts Rails.application.credentials.dig(:google_maps, :development, :api_key)&.present?"
+          echo "Checking test key:"
+          bin/rails runner "puts Rails.application.credentials.dig(:google_maps, :test, :api_key)&.present?"
+
+
       - name: Run rspec
         env: 
           SELENIUM_URL:  http://localhost:4444/wd/hub 
