--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -67,15 +67,20 @@ jobs:
           bundle exec rails db:migrate RAILS_ENV=test
 
       - name: Debug Credentials
+      - name: Start Rails server
         env:
+          RAILS_ENV: test
           RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
-        run: |
-          echo "RAILS_ENV is $RAILS_ENV"
-          echo "Checking development key:"
-          RAILS_ENV=test bin/rails runner "puts Rails.application.credentials.dig(:google_maps, :development, :api_key)&.present?"
-          echo "Checking test key:"
-          RAILS_ENV=test bin/rails runner "puts Rails.application.credentials.dig(:google_maps, :test, :api_key)&.present?"
+        run: bundle exec rails s -e test -p 3001 -d
 
+      - name: Wait for server to start
+        run: |
+          for i in {1..10}; do
+            curl -s http://localhost:3001 > /dev/null && break
+            echo "Waiting for server... ($i)"
+            sleep 2
+          done
+          curl -s http://localhost:3001 > /dev/null || (echo "Server failed to start" && exit 1)
 
       - name: Run rspec
         env: 
