--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -66,6 +66,15 @@ jobs:
           bundle exec rails db:create RAILS_ENV=test
           bundle exec rails db:migrate RAILS_ENV=test
 
+      - name: Wait for server to start
+        run: |
+          for i in {1..10}; do
+            curl -s http://localhost:3001 > /dev/null && break
+            echo "Waiting for server... ($i)"
+            sleep 2
+          done
+          curl -s http://localhost:3001 > /dev/null || (echo "Server failed to start" && exit 1)
+
       - name: Run rspec
         env: 
           RAILS_ENV: test
