--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -73,8 +73,9 @@ jobs:
         id: get-docker-network
         run: |
           # GitHub Actionsのサービスコンテナが使用するネットワークIDを取得し、
-          # 環境変数 DOCKER_NETWORK として設定する
-          DOCKER_NETWORK_ID=$(docker ps --filter "name=selenium" --format "{{.Networks}}")
+          # 環境変数 DOCKER_NETWORK として設定する。
+          # サービスコンテナは `com.docker.compose.service=selenium` というラベルを持つため、それでフィルタリングする。
+          DOCKER_NETWORK_ID=$(docker ps --filter "label=com.docker.compose.service=selenium" --format "{{.Networks}}")
           echo "DOCKER_NETWORK=${DOCKER_NETWORK_ID}" >> $GITHUB_ENV
 
       - name: Run rspec
