--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -73,9 +73,10 @@ jobs:
         id: get-docker-network
         run: |
           # GitHub Actionsのサービスコンテナが使用するネットワークIDを取得し、
-          # 環境変数 DOCKER_NETWORK として設定する。
-          # サービスコンテナは `com.docker.compose.service=selenium` というラベルを持つため、それでフィルタリングする。
-          DOCKER_NETWORK_ID=$(docker ps --filter "label=com.docker.compose.service=selenium" --format "{{.Networks}}")
+          # 環境変数 DOCKER_NETWORK として設定する。CIのサービスコンテナには
+          # `job` ラベルが付与されるため、それを利用してコンテナを特定する。
+          # `head -n 1` で複数コンテナが見つかった場合でも最初の1つに限定する。
+          DOCKER_NETWORK_ID=$(docker ps --filter "label=job" --format "{{.Networks}}" | head -n 1)
           echo "DOCKER_NETWORK=${DOCKER_NETWORK_ID}" >> $GITHUB_ENV
 
       - name: Run rspec
