--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -78,6 +78,9 @@ jobs:
           # `head -n 1` で複数コンテナが見つかった場合でも最初の1つに限定する。
           DOCKER_NETWORK_ID=$(docker ps --filter "label=job" --format "{{.Networks}}" | head -n 1)
           echo "DOCKER_NETWORK=${DOCKER_NETWORK_ID}" >> $GITHUB_ENV
+          echo "--- Debug from get-docker-network step ---"
+          echo "DOCKER_NETWORK_ID is: ${DOCKER_NETWORK_ID}"
+          echo "------------------------------------------"
 
       - name: Run rspec
         env: 
@@ -85,7 +88,11 @@ jobs:
           SELENIUM_URL:  http://localhost:4444/wd/hub 
           DOCKER_NETWORK: ${{ env.DOCKER_NETWORK }}
           RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
-        run: bundle exec rspec
+        run: |
+          echo "--- Debug from rspec step ---"
+          echo "DOCKER_NETWORK env is: $DOCKER_NETWORK"
+          echo "-----------------------------"
+          bundle exec rspec
 
       - name: Upload test failure artifacts
         if: failure()
