--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,9 @@ services:
     build: .
     # 環境変数 RAILS_COMMAND があればそれを実行し、なければデフォルトのサーバー起動コマンドを実行する
     # これにより、`docker compose run` で任意のコマンドを実行しつつ、`docker compose up` ではサーバーを起動できる
-    command: bash -c "rm -f tmp/pids/server.pid && ${RAILS_COMMAND:-bundle exec rails s -b 0.0.0.0}"
+    # command: bash -c "rm -f tmp/pids/server.pid && ${RAILS_COMMAND:-bundle exec rails s -b 0.0.0.0}"
+    # --- デバッグ用コマンド ---
+    command: bash -c "echo '--- devise.rb の内容 ---' && cat config/initializers/devise.rb && echo '--- 確認終了 ---' && sleep infinity"
     volumes:
       - .:/app
       - bundle:/usr/local/bundle
