--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,8 @@ services:
 
   web:
     build: .
+    entrypoint: /app/entrypoint.sh
+    command: ["bundle", "exec", "rails", "server", "-b", "0.0.0.0"]
     volumes:
       - .:/app
       - bundle:/usr/local/bundle
@@ -43,26 +45,28 @@ services:
       LINE_CHANNEL_SECRET: ${LINE_CHANNEL_SECRET:-}
       DISABLE_SPRING: 1 # ファイル変更の検知問題を避けるためにSpringを無効化
 
-    # docker-compose.ymlで定義したcronコンテナはconfig/schedule.rbの設定に沿ってコマンド実行
-    # lib/tasks/notifications.rake にはtask send_due: :environment とかいてある
-    # これによってRakeタスクは実行前にRailsアプリ全体を読み込む。
-    # これは、bin/rails consoleを起動したときと同じ状態。
-    # environment以下のコマンドはその時に必要とされる情報
-    cron:
-      build: .
-      command: /app/entrypoint-cron.sh
-      volumes:
-        - .:/app
-        - bundle:/usr/local/bundle
-      depends_on:
-        - db
-      environment:
-        DATABASE_HOST: db
-        DATABASE_USERNAME: postgres
-        DATABASE_PASSWORD: password
-        GOOGLE_MAPS_API_KEY: ${GOOGLE_MAPS_API_KEY:-}
-        DOCKER_CONTAINER: "true"
-        DISABLE_SPRING: 1
+  # docker-compose.ymlで定義したcronコンテナはconfig/schedule.rbの設定に沿ってコマンド実行
+  # lib/tasks/notifications.rake にはtask send_due: :environment とかいてある
+  # これによってRakeタスクは実行前にRailsアプリ全体を読み込む。
+  # これは、bin/rails consoleを起動したときと同じ状態。
+  # environment以下のコマンドはその時に必要とされる情報
+  cron:
+    build: .
+    entrypoint: /app/entrypoint.sh
+    command: ["cron", "-f"]
+    volumes:
+      - .:/app
+      - bundle:/usr/local/bundle
+    depends_on:
+      - db
+    environment:
+      DATABASE_HOST: db
+      DATABASE_USERNAME: postgres
+      DATABASE_PASSWORD: password
+      GOOGLE_MAPS_API_KEY: ${GOOGLE_MAPS_API_KEY:-}
+      DOCKER_CONTAINER: "true"
+      CONTAINER_ROLE: cron
+      DISABLE_SPRING: 1
 
 volumes:
   db-data:
